--- a/languages/zero.pot
+++ b/languages/zero.pot
@@ -1,8 +1,8 @@
-# Copyright (C) 2016 sanse
-# This file is distributed under the same license as the sanse package.
+# Copyright (C) 2016 zero
+# This file is distributed under the same license as the zero package.
 msgid ""
 msgstr ""
-"Project-Id-Version: sanse\n"
+"Project-Id-Version: zero\n"
 "Report-Msgid-Bugs-To: https://foxland.fi/contact/\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
